fixed category duplicate bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/bootjs
 security.basic.enabled=false
+spring.jackson.serialization.fail-on-empty-beans=false
